
syntax = "proto3";


message CommandBuff {
	oneof subCommand {
		SetValueSubCommand setValueSubCommand = 1;
		ManagerSubCommand managerSubCommand = 2;
		SystemSubCommand SystemSubCommand = 3;
	}
}

message SetValueSubCommand {
	uint32 id = 1;
	oneof values {
		int32 iValue = 2;
		float fValue = 3;
		uint32 uiValue = 4;
	}
	uint32 userId = 5;
}


message ManagerSubCommand {

}


message SystemSubCommand {

}