syntax = "proto3";

message SetValueSubCommand {
	uint32 id = 1;
	oneof values {
		uint32 otherValue = 2;
	}
	uint32 userId = 3;
}

message ValueSettedSubCommand {
	uint32 id = 1;
	oneof values {
		uint32 otherValue = 2;
		uint32 currentValue = 3;
		uint32 voltageValue = 4;
		float temperatureValue = 5;
	}
	uint64 dateSeconds = 6;
}

message GetResourceSubCommand {

}

message ServerCommandBuff {
	oneof subCommand {
		SetValueSubCommand setValueSubCommand = 1;
		ValueSettedSubCommand valueSettedSubCommand = 2;
		GetResourceSubCommand getREsourceSubCommand = 3;
	}
}